--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home.css">
@@ -11,23 +12,72 @@
 
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-brown">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="images/21846815_6537942.svg" class="logo" alt="logo"></a>
+    <header class="bg-brown p-30">
+        <nav class="navbar navbar-expand-lg f-18">
+            <div class="container-fluid big-container">
+              <div></div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link active" href="index.html">HOME</a>
+                  <a class="nav-link" href="activities.html">ACTIVITIES</a>
+                  <a class="nav-link" href="contact.html">CONTACT</a>
                 </div>
               </div>
             </div>
           </nav>
     </header>
+    <main>
+      <div class="img-container"></div>
+      <div class="img-container-text">
+        <h1 class="trade-winds t-white">Adventure Holidays</h1>
+      </div>
+      <div class="big-container p-60">
+       <div>
+          <p class="f-16 trade-winds">Who we are</p>
+          <p class="f-14">
+            Here at Adventure Holidays, were proud to do things a little differently to other tour operators. As part of the Altai Travel family, we operate all of our trips personally and take complete ownership of your adventure from beginning to end.
+          </p>
+          <br>
+          <p class="f-14">
+            We're passionate about adventure travel and committed to providing the best possible experiences in the world's most outstanding locations. We realised that the key to this is setting up and running our adventure operations directly in more than 30 countries in every corner of the world. This approach allows us to ensure the highest levels of safety and quality in everything we do. Our meticulous teams in the UK and across our destinations worldwide can focus on perfecting their knowledge of the beautiful locations we sell and creating authentic experiences for you to enjoy.   
+          </p>
+       </div>
+       <br>
+        <div>
+          <p class="f-16 trade-winds">Safety</p>
+          <p class="f-14">
+            Of course, taking on a challenging adventure should not mean compromising your safety. You can be confident you are always in safe hands with Adventure Jolidays. We are experts in all our activities, know all the areas in which we operate intimately and know how to ensure you enjoy your adventure safely using the best guides and the best operating procedures.        
+          </p>
+          <br>
+          <p class="f-14">
+            Our team are trained, certificated and specialise in outdoor pursuits such as mountain biking, kayaking, rock climbing, paragliding, fishing, walking tours
+          </p>
+        </div>
+        <br>
+        <div>
+          <p class="f-16 trade-winds">Expertise</p>
+          <p class="f-14">
+            We run all our own overseas operations, so we know everything you need to know about each destination in a way that is only possible when you run everything yourselves. Wherever you want to go on your adventure, several members of our UK-based team have been, and can provide you with the first hand expert advice you need to plan your perfect trip. We'd love to hear from you so ask us anything about your trip.         
+          </p>
+        </div>
+        <br>
+        <div>
+          <p class="f-16 trade-winds">Quality</p>
+          <p class="f-14">
+            We use our own equipment, transport and sometimes even our own accommodation, to ensure the best possible quality is maintained throughout your trip. All the elements of your adventure are carefully put together by our Altai team members on the ground and we're always on hand to look after you, ensuring you get the most out of your experience every step of the way.
+          </p>
+        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xsEMjWdgRdw?si=cANUDFu2CEBUeX0u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </main>
+    <footer class="bg-brown p-60">
+      <div class="big-container f-12 text-center">
+        <p>© Adventure Holidays 2022</p>
+      </div>
+    </footer>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
