--- a/activities.html
+++ b/activities.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="adventure, france, switzerland, alps, travel">
     <title>Activities</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -33,6 +34,7 @@
   <div class="big-container p-60">
     <h2 class="trade-winds">Activities in French and Swiss alps </h2>
     <div id="small-container" class="small-container p-60">
+      <!-- here i will use js code to display a list of all the activities with a button 'more info' and when the user clicks on this button, it will identicate the id of the card and redirect the user to activity.html page that will contain all the information about the place where user clicked -->
     </div>
   </div>
 </main>
