--- a/activity.html
+++ b/activity.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity</title>
+    <meta name="keywords" content="adventure, france, switzerland, alps, travel">
+    <title id="title">Activity</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/header.css">
@@ -31,6 +32,7 @@
 </header>
 <main>
   <div class="wrapper" id="wrapper">
+    <!-- here i will use js to add content from js file that has all information about places depending on the button pressed on the activities page-->
   </div>
 </main>
 <footer class="bg-brown p-60">
