--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="adventure, france, switzerland, alps, travel">
     <title>Contact</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -31,6 +32,7 @@
 </header>
 <main>
   <div class="big-container p-60">
+    <!-- contact form -->
     <form action="SEND" class="p-30">
       <p class="f-16 trade-winds">CONTACT FORM</p>
       <div class="form">
